Изменение заголовков и текста внизу

--- a/index.html
+++ b/index.html
@@ -269,13 +269,13 @@
             <h2>Контакты</h2>
     </header>
             <div class="container">
-                    <p>
+                    <p class="bottom_text">
                             <b>График работы:</b> ПН - ВС с 9.00 до 21.00.
                         </p>
-                        <p>
+                        <p class="bottom_text">
                                <span style="color:red;"><b>КОНСУЛЬТАЦИЯ БЕСПЛАТНО!</b></span>
                         </p>
-            <p>
+            <p class="bottom_text">
                     <b>Для заказа услуги</b> и быстрого ответа звоните нам по телефону <span style="color:red;"><b><a href="tel:+38800039210">495-111-11-11</a></b></span> (в рабочее время)<br><br> или оставляйте заявку на почту <span style="color:blue;"><b>info@sewageservice.ru</b></span> (в нерабочее время) и мы Вам перезвоним.
             </p>
              </div>
